# catecismobautista

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CNAME  README.md  catecismo-bautista-con-beddome-es.json  pyproject.toml
.github/workflows/: deploy.yml
generator/: __init__.py  build.py
generator/templates/: base.html  index.html  question.html  search.html  statistics.html
static/css/: styles.css
static/js/: main.js  search.js  statistics.js  unified-search.js
