[project]
name = "catecismobautista"
version = "1.0.0"
description = "El Catecismo Bautista con la Exposición Bíblica de Beddome - Static Website Generator"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "djlint>=1.36.0",
]

[project.scripts]
build-site = "generator.build:main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".venv", "docs"]
skips = ["B101"]  # assert statements are fine in non-production code

[tool.djlint]
profile = "jinja"
indent = 4
max_line_length = 120
format_css = true
format_js = true
ignore = "H006,H030,H031"  # img tag issues, meta descriptions
